Added some docs

--- a/.gitignore
+++ b/.gitignore
@@ -59,7 +59,7 @@ temp.py
 # Just an out sample
 nft_metadata.json
 
-images/
+./images/
 
 # We are working actively to bring this module to the CLI too
 */marketplace
