--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,7 @@
 
 site_name: WEB3 CLI
 repo_name: 'Web3 CLI'
-repo_url: 'https://github.com/Arpan-206/Web3-CLI.git'
+repo_url: 'https://github.com/Arpan-206/Web3-CLI'
 
 extra:
     social:
@@ -31,8 +31,8 @@ theme:
           accent: cyan  
 
     icon:
-        logo: fontawesome/solid/code
-    favicon: '/docs_assets/images/favicon.ico'
+        logo: fontawesome/solid/book
+    favicon: './docs_assets/images/favicon.ico'
     language: 'en'
 
 
@@ -44,6 +44,7 @@ plugins:
         type: timeago
     - git-authors:
         show_contribution: True
+    - mkdocstrings
     - table-reader
     - img2fig
     - mknotebooks:
@@ -52,8 +53,7 @@ plugins:
         enable_default_jupyter_cell_styling: false
         enable_default_pandas_dataframe_styling: true
     - awesome-pages
-    - mkdocstrings
-#    - enumerate-headings
+    - enumerate-headings
     - print-site:
         exclude:
             - archive/*
